--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+markdown: markdown
+title: Equipo 25 de Fundamentos
+description: Curso: Fundamentos de Biodiseño
+show_downloads: true
